Updated information on home, about, and contact pages

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
 <h1>About Me</h1>
-<p>I'm working on my One Month Rails project.</p>
+<p>My name is Holly and I am trying to learn to code. I am taking a One Month Rails class and this website is my first class project. Thanks for visiting my page!</p>
