--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,2 @@
 <h1>Welcome to my website!</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<p>I am creating this website as part of the One Month Rails class. This website will be a photo-sharing site, where users can share images and ideas with each other.</p>
