--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,2 @@
 <h1>Contact Me</h1>
-<p>You can contact me at hollymosca@gmail.com.</p>
+<p>My name is Holly. If you have any questions or comments, you can contact me at hollymosca@gmail.com.</p>
