Import Bootstrap Template

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,6 @@
-<h1>About Me</h1>
-<p>My name is Holly and I am trying to learn to code. I am taking a One Month Rails class and this website is my first class project. Thanks for visiting my page!</p>
+<div class="jumbotron">
+    <div class="container">
+        <h1>About us</h1>
+        <p>This is the sample project I built for <a href="https://onemonthrails.com">One Month Rails</a>.</p>
+    </div>
+</div>
