--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,6 @@
-<h1>Contact Me</h1>
-<p>My name is Holly. If you have any questions or comments, you can contact me at hollymosca@gmail.com.</p>
+<div class="jumbotron">
+    <div class="container">
+		<h1>Contact Me</h1>
+		<p>My name is Holly. If you have any questions or comments, you can contact me at hollymosca@gmail.com.</p>
+	</div>
+</div>
